[workspace]
resolver = "2"  # Fix per edition 2021
members = [
    "core",
    "consensus",  # Add this line
]

[workspace.dependencies]
# Cryptography - versioni compatibili
sha2 = "0.10.8"
secp256k1 = "0.27.0"
hex = "0.4.3"

# Serialization
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
bincode = "1.3.3"

# Utilities
anyhow = "1.0.75"
thiserror = "1.0.50"
log = "0.4.20"

# Testing
criterion = "0.5.1"
proptest = "1.4.0"

# Database
rocksdb = "0.21"

# Consensus & Networking (add these if not already present)
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tendermint = "0.34"
tendermint-abci = "0.34"

# Additional dependencies needed
tempfile = "3.8"
base64ct = "=1.6.0"
