[package]
name = "sedly-miner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "miner"
path = "src/main.rs"

[dependencies]
# Local dependencies
sedly-core = { path = "../core" }
sedly-rpc = { path = "../rpc" }

# Cryptography
sha2 = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# CLI
clap = { workspace = true }

# Utilities
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

# Performance
rayon = "1.8"
num_cpus = "1.16"